<resources>
    <string name="app_name">WordBook</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sync">Sync</string>
    <string name="search">Search</string>
    <string name="word">Word</string>
    <string name="mean">Mean</string>
    <string name="eiken">英検</string>
    <string name="TOEIC">TOEIC</string>
    <string name="schoolLevel">学校レベル</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="wordToStudy">Word to study</string>
    <string name="recents">Recents</string>
    <string name="history">History</string>
    <string name="quickTest">Quick Test</string>
    <string name="checkUnderstanding">Check Understanding</string>
</resources>