<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeTab"
        android:icon="@mipmap/baseline_home_black_24"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/dictionaryTab"
        android:icon="@mipmap/round_menu_book_black_24"
        android:title="@string/dictionaries"
        app:showAsAction="always" />

    <item
        android:id="@+id/wordToStudyTab"
        android:icon="@mipmap/round_access_time_black_24"
        android:title="@string/wordToStudy"
        app:showAsAction="always" />

    <item
        android:id="@+id/recentTab"
        android:icon="@mipmap/round_access_time_black_24"
        android:title="@string/recents"
        app:showAsAction="always" />

    <item
        android:id="@+id/historyTab"
        android:icon="@mipmap/round_access_time_black_24"
        android:title="@string/history"
        app:showAsAction="always" />
</menu>