<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wordField"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mean" />

            <TextView
                android:id="@+id/meanField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/eiken" />

            <TextView
                android:id="@+id/eikenField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/TOEIC" />

            <TextView
                android:id="@+id/TOEICField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/schoolLevel" />

            <TextView
                android:id="@+id/schoolField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/descriptionFiled"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>